name:                braintree
version:             0.1.0.0
synopsis:            Braintree API library for Haskell
description:         Please see README.md
homepage:            https://github.com/Bogdanp/haskell-braintree#readme
license:             BSD3
license-file:        LICENSE
author:              Bogdan Paul Popa
maintainer:          bogdan@defn.io
copyright:           2016 Bogdan Paul Popa
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Braintree.Client
                       Web.Braintree.Client.Conduit
                       Web.Braintree.ClientToken
                       Web.Braintree.Error
                       Web.Braintree.Types
  other-modules:       Web.Braintree.Request
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10 && < 0.11
                     , case-insensitive >= 1.2 && < 2
                     , conduit >= 1.2 && < 2
                     , http-client >= 0.4 && < 0.5
                     , http-client-tls >= 0.2 && < 0.3
                     , http-conduit >= 2.1 && < 3
                     , http-types >= 0.9 && < 0.10
                     , resourcet >= 1.1 && < 2
                     , text >= 1.2 && < 2
                     , transformers >= 0.5 && < 0.6
                     , xml-conduit >= 1.3 && < 2
                     , xml-types >= 0.3 && < 0.4
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Bogdanp/haskell-braintree
